--- a/lang/backup_scheduler-zh_CN.po
+++ b/lang/backup_scheduler-zh_CN.po
@@ -4,8 +4,9 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-02-25T11:02:43+00:00\n"
+"PO-Revision-Date: 2013-06-26T14:12:29+00:00\n"
 "Last-Translator: YiscaJoe <J.Yisca@gmail.com>\n"
+"Last-Translator: jeffli <www.jdccie.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,17 +45,38 @@ msgstr ""
 msgid "Keep the backup files for (in days):"
 msgstr "保存文件的时间（按天数）："
 
+msgid "If you want to be notify when the backup process is finished, please enter your email:"
+msgstr "如果你想当备份完成的时候发邮件通知,请输入邮箱:"
+
+msgid "Customize the name of the files?"
+msgstr "自定义备份文件的名字"
+
+msgid "Add this string to the name of the files:"
+msgstr "添加这个字符串到文件名"
+
+msgid "The name of the files will be %s."
+msgstr "这个名字将为 %s"
+
+msgid "%s is the string of the present option. You may set this option to %s."
+msgstr "%s是现在的字符串,你可以自定义 %s"
+
+msgid "%s is a random string for security reasons."
+msgstr "%s做为随机字符串出现"
+
+msgid "%s is the extension (i.e. %s)."
+msgstr "%s扩展 (i.e. %s)"
+
 msgid "What do you want to save?"
 msgstr "您要保存哪些文件呢？"
 
 msgid "All directories (the full Wordpress installation):"
-msgstr ""
+msgstr "所有目录(安装完整的wordpress)"
 
 msgid "(i.e. %s)"
 msgstr "（即 %s）"
 
 msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
-msgstr ""
+msgstr "如果你要每天保存,请检查选项.注意,备分文件会相当大"
 
 msgid "The plugins directory:"
 msgstr "插件目录："
@@ -68,14 +90,44 @@ msgstr "主题目录："
 msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
 msgstr "选中此项将保存所有您已经安装和使用的主题。"
 
-msgid "The upload directory:"
-msgstr "上传文件目录："
+msgid "The upload directory for this blog:"
+msgstr ""
 
 msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
 msgstr "选中此项将保存已经上传的图片和文件等等在articles/posts/pages中。"
 
+msgid "All upload directories (for this site and the sub-blogs):"
+msgstr ""
+
+msgid "Check this option if you want to save the images, the files, etc. that people have uploaded on their websites to create articles/posts/pages."
+msgstr ""
+
+msgid "The upload directory for the main site:"
+msgstr ""
+
+msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your main website to create your articles/posts/pages."
+msgstr ""
+
+msgid "The upload directory:"
+msgstr "上传文件目录："
+
 msgid "The SQL database:"
 msgstr "SQL数据库："
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for this blog"
+msgstr ""
+
+msgid "All SQL databases:"
+msgstr ""
+
+msgid "Check this option if you want to save all texts of posts, configurations, etc. for all blogs in this website"
+msgstr ""
+
+msgid "Only your SQL database:"
+msgstr ""
+
+msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
+msgstr ""
 
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
 msgstr "选中此项将保存您文章中的文字和设置等等。"
@@ -116,13 +168,25 @@ msgstr ""
 msgid "Should be at the form %s or %s"
 msgstr ""
 
+msgid "If %s is omitted then it is automatically added when connecting to your FTP. This is useful if you get an 404 error submitting these parameters with %s."
+msgstr ""
+
+msgid "FTP port:"
+msgstr ""
+
+msgid "By default the port is %s"
+msgstr ""
+
 msgid "Your FTP login:"
 msgstr ""
 
 msgid "Your FTP pass:"
 msgstr ""
 
-msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgid "Click on that button %s to test if the above information is correct"
+msgstr ""
+
+msgid "Test"
 msgstr ""
 
 msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
@@ -155,6 +219,9 @@ msgstr "即使您没有时间限制，建议您将该值设定为15s，以免您
 msgid "Here is the backup files. You can force a new backup or download previous backup files."
 msgstr "这是备份文件。你可以建立一个新的备份文件或者下载您之前的备份文件。"
 
+msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
+msgstr ""
+
 msgid "An automatic backup will be launched in %s days and %s hours."
 msgstr "自动备份将在 %s天%s小时 后进行。"
 
@@ -165,6 +232,36 @@ msgid "Force a new backup (with Mail/FTP)"
 msgstr ""
 
 msgid "Force a new backup (without any external storage or sending)"
+msgstr ""
+
+msgid "How to restore the backup files?"
+msgstr ""
+
+msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
+msgstr ""
+
+msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
+msgstr ""
+
+msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
+msgstr ""
+
+msgid "Save the extracted files on your webserver."
+msgstr ""
+
+msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
+msgstr ""
+
+msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
+msgstr ""
+
+msgid "Install a fresh version of Wordpress on your webserver."
+msgstr ""
+
+msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
+msgstr ""
+
+msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
 msgstr ""
 
 msgid "Backups"
@@ -206,10 +303,10 @@ msgstr "删除这些备份文件"
 msgid "The process is still in progress for this backup (begun %s at %s)."
 msgstr ""
 
-msgid "The SQL extraction is in progress (%s tables extracted)."
+msgid "The SQL extraction is in progress (%s entries extracted)."
 msgstr ""
 
-msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgid "The ZIP creation is in progress (%s files has been added in %s zip files and the current size of the zip files is %s)."
 msgstr ""
 
 msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
@@ -227,25 +324,31 @@ msgstr ""
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "（现在，这里没有任何备份文件。你应该等待或者强行建立一个备份（看看下面））"
 
-msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgid "Please wait, a backup is in progress for %s seconds! Wait until %s seconds for an automatic restart."
 msgstr ""
 
-msgid "It is impossible to create the %s file in the %s folder. Please check folder/file permissions."
+msgid "This error message may also be generated if the chunk size is too big: try first to set the chunk size to 1Mo in order to avoid any memory saturation of your server and then increase it slowly..."
 msgstr ""
 
-msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
-msgstr "另一个SQL数据提取仍在进行（已运行 %s 秒）请稍等！"
+msgid "(SQL extraction - ending)"
+msgstr ""
 
 msgid "(SQL extraction)"
 msgstr ""
 
-msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr "另一个备份操作仍在进行（已运行 %s 秒）请稍等！"
+msgid "(SQL extraction - nothing to be done)"
+msgstr ""
 
 msgid "(ZIP creation)"
 msgstr ""
 
 msgid "(FTP sending)"
+msgstr ""
+
+msgid "(FTP sending - ending)"
+msgstr ""
+
+msgid "(FTP sending - nothing to be done)"
 msgstr ""
 
 msgid "Backup of %s on %s (%s)"
@@ -257,14 +360,17 @@ msgstr ""
 msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
 msgstr ""
 
-msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgid "(MAIL sending - ending)"
+msgstr ""
+
+msgid "(MAIL sending - nothing to be done)"
+msgstr ""
+
+msgid "(END - ending)"
 msgstr ""
 
 msgid "An unknown error occured!"
 msgstr "发生了一个未知错误！"
-
-msgid "The process has been canceled by a third person"
-msgstr ""
 
 msgid "A new backup has been generated!"
 msgstr "已经产生了一个新的备份！"
@@ -278,10 +384,55 @@ msgstr "这里是今天 %s %s 备份文件的链接"
 msgid "Best regards,"
 msgstr "最亲切的问候，"
 
-msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgid "Please find hereafter a summary of the backup process."
 msgstr ""
 
-msgid "Backup of %s on %s - FTP confirmation"
+msgid "Global synthesis"
+msgstr ""
+
+msgid "The backup process has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "SQL synthesis"
+msgstr ""
+
+msgid "The SQL extraction has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "%s entries have been extracted and have been stored in %s files."
+msgstr ""
+
+msgid "%s created on %s"
+msgstr ""
+
+msgid "ZIP synthesis"
+msgstr ""
+
+msgid "The ZIP creation phase has started on %s and have lasted %s minutes and %s seconds"
+msgstr ""
+
+msgid "%s files have been stored into %s split files (zip, z01, z02, etc.)."
+msgstr ""
+
+msgid "Please note that %s files have been excluded from the backup process because their sizes exceed the chunk size (i.e. %s Mo)."
+msgstr ""
+
+msgid "%s (size %s)"
+msgstr ""
+
+msgid "These zip files are accessible for %s days at the following path:"
+msgstr ""
+
+msgid "FTP synthesis"
+msgstr ""
+
+msgid "The %s zip files have been stored on the specified FTP: %s"
+msgstr ""
+
+msgid "%s stored on %s"
+msgstr ""
+
+msgid "Backup of %s on %s"
 msgstr ""
 
 msgid "No host has been defined"
@@ -296,9 +447,21 @@ msgstr ""
 msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
 msgstr ""
 
+msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
+msgstr ""
+
 msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
 msgstr ""
 
 msgid "The login/password does not seems valid!"
+msgstr ""
+
+msgid "The folder %s does not seems to be writable"
+msgstr ""
+
+msgid "It seems impossible to switch to PASV mode"
+msgstr ""
+
+msgid "Everything OK!"
 msgstr ""
 
