--- a/lang/backup_scheduler-es_ES.po
+++ b/lang/backup_scheduler-es_ES.po
@@ -4,12 +4,13 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2013-04-07T14:05:06+00:00\n"
+"PO-Revision-Date: 2014-02-02T19:34:32+00:00\n"
 "Last-Translator: Javier <>\n"
 "Last-Translator: AVfoto <alvaro@alvarovillafoto.es>\n"
 "Last-Translator: charliechin <http://www.twitter.com/charliechin>\n"
 "Last-Translator: IgnacioCalvo <http://ignaciocalvo.com>\n"
 "Last-Translator: JordiVives <>\n"
+"Last-Translator: FelipeJAG <www.coyse.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,27 +48,6 @@ msgstr "Por favor, tenga en cuenta que su copia de seguridad no finalizará exac
 
 msgid "Keep the backup files for (in days):"
 msgstr "Guardar los archivos de copia por (en dias):"
-
-msgid "If you want to be notify when the backup process is finished, please enter your email:"
-msgstr ""
-
-msgid "Customize the name of the files?"
-msgstr ""
-
-msgid "Add this string to the name of the files:"
-msgstr ""
-
-msgid "The name of the files will be %s."
-msgstr ""
-
-msgid "% is the string of the present option. You may set this option to %s."
-msgstr ""
-
-msgid "% is a random string for security reasons."
-msgstr ""
-
-msgid "% is the extension (i.e. %s)."
-msgstr ""
 
 msgid "What do you want to save?"
 msgstr "¿Qué quiere guardar?"
@@ -306,12 +286,6 @@ msgstr "Eliminar estos archivos de la copia de seguridad"
 msgid "The process is still in progress for this backup (begun %s at %s)."
 msgstr "El proceso de esta copia de seguridad aún está en marcha (Empezado %s en %s)."
 
-msgid "The SQL extraction is in progress (%s entries extracted)."
-msgstr ""
-
-msgid "The ZIP creation is in progress (%s files has been added in %s zip files and the current size of the zip files is %s)."
-msgstr ""
-
 msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
 msgstr "El envío mediante FTP está en curso (%s archivos se ha almacenado en el servidor FTP)."
 
@@ -327,32 +301,14 @@ msgstr "Espere por favor..."
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(Por el momento, no hay archivos de copia de seguridad ... Espere o fuerce una copia de seguridad (ver más abajo))"
 
-msgid "Please wait, a backup is in progress for %s seconds! Wait until %s seconds for an automatic restart."
-msgstr ""
-
-msgid "This error message may also be generated if the chunk size is too big: try first to set the chunk size to 1Mo in order to avoid any memory saturation of your server and then increase it slowly..."
-msgstr ""
-
-msgid "(SQL extraction - ending)"
-msgstr ""
-
 msgid "(SQL extraction)"
 msgstr "(extracción SQL)"
-
-msgid "(SQL extraction - nothing to be done)"
-msgstr ""
 
 msgid "(ZIP creation)"
 msgstr "(Creación del archivo ZIP)"
 
 msgid "(FTP sending)"
 msgstr "(Enviando FTP)"
-
-msgid "(FTP sending - ending)"
-msgstr ""
-
-msgid "(FTP sending - nothing to be done)"
-msgstr ""
 
 msgid "Backup of %s on %s (%s)"
 msgstr "Copia de seguridad de %s en %s (%s)"
@@ -362,15 +318,6 @@ msgstr "(enviando CORREO)"
 
 msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
 msgstr "¡Su instalación de Wordpress no puede enviar correos electrónicos (con archivos adjuntos pesados)!"
-
-msgid "(MAIL sending - ending)"
-msgstr ""
-
-msgid "(MAIL sending - nothing to be done)"
-msgstr ""
-
-msgid "(END - ending)"
-msgstr ""
 
 msgid "An unknown error occured!"
 msgstr "¡Oops! ¡Ha ocurrido un error desconocido!"
@@ -386,57 +333,6 @@ msgstr "Aquí se adjunta el %s en los archivos de copia de seguridad de %s para 
 
 msgid "Best regards,"
 msgstr "Saludos cordiales,"
-
-msgid "Please find hereafter a summary of the backup process."
-msgstr ""
-
-msgid "Global synthesis"
-msgstr ""
-
-msgid "The backup process has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "SQL synthesis"
-msgstr ""
-
-msgid "The SQL extraction has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "%s entries have been extracted and have been stored in %s files."
-msgstr ""
-
-msgid "%s created on %s"
-msgstr ""
-
-msgid "ZIP synthesis"
-msgstr ""
-
-msgid "The ZIP creation phase has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "%s files have been stored into %s split files (zip, z01, z02, etc.)."
-msgstr ""
-
-msgid "Please note that %s files have been excluded from the backup process because their sizes exceed the chunk size (i.e. %s Mo)."
-msgstr ""
-
-msgid "%s (size %s)"
-msgstr ""
-
-msgid "These zip files are accessible for %s days at the following path:"
-msgstr ""
-
-msgid "FTP synthesis"
-msgstr ""
-
-msgid "The %s zip files have been stored on the specified FTP: %s"
-msgstr ""
-
-msgid "%s stored on %s"
-msgstr ""
-
-msgid "Backup of %s on %s"
-msgstr ""
 
 msgid "No host has been defined"
 msgstr "No se ha definido ningún servidor"
@@ -467,4 +363,10 @@ msgstr "Parece imposible pasar a modo PASV"
 
 msgid "Everything OK!"
 msgstr "¡Todo bien!"
+
+msgid "If you want to be notify when the backup process is finished, please enter your email:"
+msgstr "Si quiere que se le notifique cuando el proceso de respaldo haya terminado, favor de agregar su correo electrónico:"
+
+msgid "Customize the name of the files?"
+msgstr "¿Desea personalizar el nombre de los archivos?"
 
