--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-Modify the more plugin tab
-change http://s.wordpress.org/ into https://s.wordpress.org/
+Save into a FTP folder by date
+delete old backup on the FTP
 Password protected Alexander Dippold (Alexander.Dippold at gmail)
