* NEW: You may now create subfolder in the FTP directory* NEW: improve the look of the configuration page
git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@870770 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,1 @@
-Save into a FTP folder by date
-delete old backup on the FTP
-Password protected Alexander Dippold (Alexander.Dippold at gmail)
+Password protected Alexander Dippold (Alexander.Dippold gmail)
