--- a/lang/backup_scheduler-fa_IR.po
+++ b/lang/backup_scheduler-fa_IR.po
@@ -4,7 +4,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2014-02-11T13:04:07+00:00\n"
+"PO-Revision-Date: 2014-03-06T12:54:54+00:00\n"
+"Last-Translator: sehrama.ir <sehrama.ir>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,446 +24,137 @@ msgid "This plugin enables scheduled backup of important part of your website : 
 msgstr "این پلاگین پشتیبان گیری زمان بندی شده را که بخش مهمی برای وب سایت شماست فعال می کند: استفاده آسان و بهینه"
 
 msgid "Sorry, but you should install/activate %s on your website. Otherwise, this plugin will not work properly!"
-msgstr "متاسفانه، شما باید پلاگین را در وب سایت خود نصب و یا فعال  %s کنید، احتمال دارد پلاگین بخوبی کار نکند"
+msgstr "متاسفانه، شما باید پلاگین را در وب سایت خود نصب و یا فعال  %s کنید، احتمال دارد پلاگین به‌ خوبی کار نکند"
 
 msgid "How often do you want to backup your website?"
-msgstr "شما چگونه میخواهید از وب سایت خود پشتیبان گیری بگیرید"
+msgstr "شما چگونه می‌خواهید از وب سایت خود پشتیبان‌گیری کنید؟"
 
 msgid "Frequency (in days):"
-msgstr "تقریبا در روزهای"
+msgstr "تقریباً در روزهای"
 
 msgid "Time of the backups:"
-msgstr "زمان پشتیبان گیری"
+msgstr "زمان پشتیبان‌گیری"
 
 msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
-msgstr "اگر 0 باشد بمعنی در ساعت 0. اگر 1 بمعنی ساعت 1 و اگر 13 بمعنی ساعت 1 بعد از ظهر است. پشتیبان گیری بسته به زمان سرور شما در زمان انتخاب شده انجام خواهد شد"
-
-msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
-msgstr ""
-
-msgid "Keep the backup files for (in days):"
-msgstr ""
-
-msgid "If you want to be notify when the backup process is finished, please enter your email:"
-msgstr ""
-
-msgid "Customize the name of the files?"
-msgstr ""
-
-msgid "Add this string to the name of the files:"
-msgstr ""
-
-msgid "The name of the files will be %s."
-msgstr ""
-
-msgid "%s is the string of the present option. You may set this option to %s."
-msgstr ""
-
-msgid "%s is a random string for security reasons."
-msgstr ""
-
-msgid "%s is the extension (i.e. %s)."
-msgstr ""
-
-msgid "What do you want to save?"
-msgstr ""
-
-msgid "All directories (the full Wordpress installation):"
-msgstr ""
-
-msgid "(i.e. %s)"
-msgstr ""
-
-msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
-msgstr ""
-
-msgid "The plugins directory:"
-msgstr ""
-
-msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
-msgstr ""
-
-msgid "The themes directory:"
-msgstr ""
-
-msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
-msgstr ""
-
-msgid "The upload directory for this blog:"
-msgstr ""
-
-msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
-msgstr ""
-
-msgid "All upload directories (for this site and the sub-blogs):"
-msgstr ""
-
-msgid "Check this option if you want to save the images, the files, etc. that people have uploaded on their websites to create articles/posts/pages."
-msgstr ""
-
-msgid "The upload directory for the main site:"
-msgstr ""
-
-msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your main website to create your articles/posts/pages."
-msgstr ""
-
-msgid "The upload directory:"
-msgstr ""
-
-msgid "The SQL database:"
-msgstr ""
-
-msgid "Check this option if you want to save the text of your posts, your configurations, etc. for this blog"
-msgstr ""
+msgstr "اگر 0 باشد به معنی در ساعت 0. اگر 1 به معنی ساعت 1 و اگر 13 به معنی ساعت 1 بعد از ظهر است. پشتیبان گیری بسته به زمان سرور شما در زمان انتخاب شده انجام خواهد شد"
 
 msgid "All SQL databases:"
-msgstr ""
-
-msgid "Check this option if you want to save all texts of posts, configurations, etc. for all blogs in this website"
-msgstr ""
+msgstr "همه‌ی پایگاه‌های داده SQL"
 
 msgid "Only your SQL database:"
-msgstr ""
-
-msgid "Check this option if you want to save the text of your posts, your configurations, etc. for the main website"
-msgstr ""
-
-msgid "Check this option if you want to save the text of your posts, your configurations, etc."
-msgstr ""
+msgstr "فقط پایگاه داده‌ی SQL"
 
 msgid "The maximum file size (in MB):"
-msgstr ""
-
-msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
-msgstr ""
+msgstr "حداکثر سایز فایل (به مگابایت)"
 
 msgid "Do you want that the backup is sent by email?"
-msgstr ""
+msgstr "آیا می‌خواهید فایل پشتیبان از طریق ایمیل ارسال شود؟"
 
 msgid "Send the backup files by email:"
-msgstr ""
-
-msgid "If so, please enter your email:"
-msgstr ""
-
-msgid "Do you want to add a suffix to sent files:"
-msgstr ""
-
-msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
-msgstr ""
+msgstr "ارسال فایل‌های پشتیبان به ایمیل"
 
 msgid "You do not need to fill this field if no mail is to be sent."
-msgstr ""
-
-msgid "Do you want that the backup is stored on a FTP?"
-msgstr ""
+msgstr "اگر ایمیلی برای ارسال وجود ندارد، شما نیازی به پر کردن این فیلد ندارید."
 
 msgid "Save the backup files on a FTP?"
-msgstr ""
+msgstr "آیا فایل پشتیبان روی اف‌تی‌پی ذخیره شود؟"
 
 msgid "FTP host:"
-msgstr ""
-
-msgid "Should be at the form %s or %s"
-msgstr ""
-
-msgid "If %s is omitted then it is automatically added when connecting to your FTP. This is useful if you get an 404 error submitting these parameters with %s."
-msgstr ""
+msgstr "هاست اف‌تی‌پی:"
 
 msgid "FTP port:"
-msgstr ""
-
-msgid "By default the port is %s"
-msgstr ""
+msgstr "پورت اف‌تی‌پی"
 
 msgid "Your FTP login:"
-msgstr ""
+msgstr "کاربری اف‌تی‌پی شما"
 
 msgid "Your FTP pass:"
-msgstr ""
-
-msgid "Click on that button %s to test if the above information is correct"
-msgstr ""
+msgstr "رمز اف‌تی‌پی شما"
 
 msgid "Test"
-msgstr ""
-
-msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
-msgstr ""
-
-msgid "Advanced - Memory and time management"
-msgstr ""
-
-msgid "What is the maximum size of allocated memory (in MB):"
-msgstr ""
-
-msgid "On some Wordpress installation, you may have memory issues. Thus, try to reduce this number if you face such error."
-msgstr ""
-
-msgid "For your information, the memory limit of your webserver is %s whereas the present memory usage is %s."
-msgstr ""
-
-msgid "It is recommended that the maximum attachment size is not set to a value higher than this one."
-msgstr ""
-
-msgid "Please note that the files greater than this limit won't be included in the zip file!"
-msgstr ""
-
-msgid "What is the maximum time for the php scripts execution (in seconds):"
-msgstr ""
-
-msgid "Even if you do not have time restriction, it is recommended to set this value to 15sec in order to avoid any killing of the php scripts by your web hoster."
-msgstr ""
-
-msgid "Here is the backup files. You can force a new backup or download previous backup files."
-msgstr ""
-
-msgid "Please note that the current GMT time of the server is %s. If it is not correct, please configure the Wordpress installation correctly."
-msgstr ""
-
-msgid "An automatic backup will be launched in %s days and %s hours."
-msgstr ""
-
-msgid "The backup process has started %s hours ago but has not finished yet."
-msgstr ""
-
-msgid "Force a new backup (with Mail/FTP)"
-msgstr ""
-
-msgid "Force a new backup (without any external storage or sending)"
-msgstr ""
+msgstr "آزمایش"
 
 msgid "How to restore the backup files?"
-msgstr ""
-
-msgid "To restore the backups, and if you have backuped the full installation, you will have to execute the following steps:"
-msgstr ""
-
-msgid "Save all zip files (i.e. *.zip, *.z01, *.z02, etc.) in a single folder on your hard disk."
-msgstr ""
-
-msgid "Unzip these files by using IZArc, Winzip, or Winrar (others software could not support these multipart zip and consider that the archive is corrupted)."
-msgstr ""
-
-msgid "Save the extracted files on your webserver."
-msgstr ""
-
-msgid "Reimport the SQL files (i.e. *.sql1, *sql2, etc.) with phpmyadmin (it is recommended to save your database first)."
-msgstr ""
-
-msgid "To restore the backups, and if you have backuped only some folders, you will have to execute the following steps:"
-msgstr ""
-
-msgid "Install a fresh version of Wordpress on your webserver."
-msgstr ""
-
-msgid "Replace the folders (i.e. 'plugins',  'themes', and/or 'uploads') of the root of your webserver by the extracted folders."
-msgstr ""
-
-msgid "Replace the wp-config.php (at the root of your webserver) with the extracted one."
-msgstr ""
+msgstr "چگونه فایل‌های پشتیبان را فراخوانی کنیم؟"
 
 msgid "Backups"
-msgstr ""
-
-msgid "Parameters"
-msgstr ""
+msgstr "بک‌آپ‌ها"
 
 msgid "Manage translations"
-msgstr ""
+msgstr "مدیریت ترجمه"
 
 msgid "Give feedback"
-msgstr ""
+msgstr "ارسال بازخورد"
 
 msgid "Other plugins"
-msgstr ""
+msgstr "سایر افزونه‌ها"
 
 msgid "Date of the backup"
-msgstr ""
+msgstr "تاریخ پشتیبان‌گیری"
 
 msgid "Backup files"
-msgstr ""
-
-msgid "Part %s"
-msgstr ""
-
-msgid "Backup finished on %s at %s"
-msgstr ""
-
-msgid "The total size of the files is %s"
-msgstr ""
-
-msgid "These files will be deleted in %s days"
-msgstr ""
-
-msgid "Delete these backup files"
-msgstr ""
-
-msgid "The process is still in progress for this backup (begun %s at %s)."
-msgstr ""
-
-msgid "The SQL extraction is in progress (%s entries extracted)."
-msgstr ""
-
-msgid "The ZIP creation is in progress (%s files has been added in %s zip files and the current size of the zip files is %s)."
-msgstr ""
-
-msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
-msgstr ""
-
-msgid "The MAIL sending is in progress (%s files has been sent)."
-msgstr ""
-
-msgid "Cancel this process"
-msgstr ""
-
-msgid "Please wait..."
-msgstr ""
-
-msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
-msgstr ""
-
-msgid "Please wait, a backup is in progress for %s seconds! Wait until %s seconds for an automatic restart."
-msgstr ""
-
-msgid "This error message may also be generated if the chunk size is too big: try first to set the chunk size to 1Mo in order to avoid any memory saturation of your server and then increase it slowly..."
-msgstr ""
-
-msgid "(SQL extraction - ending)"
-msgstr ""
-
-msgid "(SQL extraction)"
-msgstr ""
-
-msgid "(SQL extraction - nothing to be done)"
-msgstr ""
-
-msgid "(ZIP creation)"
-msgstr ""
-
-msgid "(FTP sending)"
-msgstr ""
-
-msgid "(FTP sending - ending)"
-msgstr ""
-
-msgid "(FTP sending - nothing to be done)"
-msgstr ""
-
-msgid "Backup of %s on %s (%s)"
-msgstr ""
-
-msgid "(MAIL sending)"
-msgstr ""
-
-msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
-msgstr ""
-
-msgid "(MAIL sending - ending)"
-msgstr ""
-
-msgid "(MAIL sending - nothing to be done)"
-msgstr ""
-
-msgid "(END - ending)"
-msgstr ""
-
-msgid "An unknown error occured!"
-msgstr ""
-
-msgid "A new backup has been generated!"
-msgstr ""
-
-msgid "Dear sirs,"
-msgstr ""
-
-msgid "Here is attached the %s on %s backup files for today"
-msgstr ""
-
-msgid "Best regards,"
-msgstr ""
-
-msgid "Please find hereafter a summary of the backup process."
-msgstr ""
-
-msgid "Global synthesis"
-msgstr ""
-
-msgid "The backup process has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "SQL synthesis"
-msgstr ""
-
-msgid "The SQL extraction has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "%s entries have been extracted and have been stored in %s files."
-msgstr ""
-
-msgid "%s created on %s"
-msgstr ""
-
-msgid "ZIP synthesis"
-msgstr ""
-
-msgid "The ZIP creation phase has started on %s and have lasted %s minutes and %s seconds"
-msgstr ""
-
-msgid "%s files have been stored into %s split files (zip, z01, z02, etc.)."
-msgstr ""
-
-msgid "Please note that %s files have been excluded from the backup process because their sizes exceed the chunk size (i.e. %s Mo)."
-msgstr ""
-
-msgid "%s (size %s)"
-msgstr ""
-
-msgid "These zip files are accessible for %s days at the following path:"
-msgstr ""
-
-msgid "FTP synthesis"
-msgstr ""
-
-msgid "The %s zip files have been stored on the specified FTP: %s"
-msgstr ""
-
-msgid "%s stored on %s"
-msgstr ""
-
-msgid "ERROR: %s has not been stored. The error message was: %s"
-msgstr ""
-
-msgid "Backup of %s on %s"
-msgstr ""
-
-msgid "No host has been defined"
-msgstr ""
-
-msgid "Your PHP installation does not support SSL features... Thus, please use a standard FTP and not a FTPS!"
-msgstr ""
-
-msgid "The host %s cannot be resolved!"
-msgstr ""
-
-msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
-msgstr ""
-
-msgid "The file %s cannot be transfered to the FTP repository and PASV mode cannot be entered : %s"
-msgstr ""
-
-msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
-msgstr ""
-
-msgid "The login/password does not seems valid!"
-msgstr ""
-
-msgid "The folder %s does not seems to be writable"
-msgstr ""
-
-msgid "It seems impossible to switch to PASV mode"
-msgstr ""
+msgstr "فایل‌های پشتیبان"
 
 msgid "Everything OK!"
-msgstr ""
+msgstr "همه‌چی آرومه! من چقدر خوش‌بختم!"
+
+msgid "Keep the backup files for (in days):"
+msgstr "نگه‌داری فایل‌های پشتیبان به مدت (روز)"
+
+msgid "If you want to be notify when the backup process is finished, please enter your email:"
+msgstr "اگر می‌خواهید به محض اتمام عملیات پشتیبان‌گیری مطلع شوید، ایمیل‌تان را وارد کنید."
+
+msgid "Customize the name of the files?"
+msgstr "شخصی‌سازی نام فایل‌ها"
+
+msgid "Add this string to the name of the files:"
+msgstr "افزودن این رشته به نام فایل‌ها"
+
+msgid "The name of the files will be %s."
+msgstr "نام فایل‌ها %s خواهد بود."
+
+msgid "What do you want to save?"
+msgstr "گزینه‌های ذخیره‌سازی فایل پشتیبان را انتخاب کنید:"
+
+msgid "All directories (the full Wordpress installation):"
+msgstr "همه‌ی دایرکتوری‌ها (نصب و راه‌اندازی کامل وردپرس)"
+
+msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
+msgstr "اگر می‌خواهید همه را ذخیره کنید، این گزینه باید انتخاب شود. احتیاط کنید، چون ممکن است حجم نسخه‌ی پشتیبان زیاد شود."
+
+msgid "The plugins directory:"
+msgstr "دایرکتوری افزونه‌ها"
+
+msgid "The themes directory:"
+msgstr "دایرکتوری قالب‌ها"
+
+msgid "The upload directory for this blog:"
+msgstr "دایرکتوری آپلود برای این وبلاگ"
+
+msgid "All upload directories (for this site and the sub-blogs):"
+msgstr "همه‌ی شاخه‌های آپلود (برای این سایت و زیر دامنه‌ها)"
+
+msgid "(FTP sending)"
+msgstr "(در حال ارسال اف‌تی‌پی)"
+
+msgid "(FTP sending - ending)"
+msgstr "(اتمام - ارسال اف‌تی‌پی)"
+
+msgid "Dear sirs,"
+msgstr "آقایان محترم"
+
+msgid "Best regards,"
+msgstr "بهترین ارزوها"
+
+msgid "The folder %s does not seems to be writable"
+msgstr "به نظر می‌رسد پوشه‌ی %s قابل نگارش نباشد"
+
+msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
+msgstr "همچنان توجه داشته باشید که پشتیبان‌گیری دقیقاً در این زمان به اتمام نمی‌رسد. فایند پشتیبان‌گیری ممکن است بیش از 6 ساعت هم طول بکشد. به ویژه اگر شما ترافیک زیادی روی وب‌سایتتان داشته باشید و یا حجم فایل پشتیبان‌تان زیاد باشد."
+
+msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
+msgstr "اگر می‌خواهید همه‌ی افزونه‌هایی را که روی وب‌سایت‌تان نصب کرده‌اید و استفاده می‌کنید، ذخیره شوند، این گزینه را انتخاب کنید."
+
+msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
+msgstr "اگر می‌خواهید همه‌ی قالب‌هایی را که روی وب‌سایت‌تان نصب کرده‌اید و استفاده می‌کنید، ذخیره شوند، این گزینه را انتخاب کنید."
 
