--- a/lang/backup_scheduler-de_DE.po
+++ b/lang/backup_scheduler-de_DE.po
@@ -4,10 +4,11 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2013-03-15T22:00:57+00:00\n"
+"PO-Revision-Date: 2014-04-06T17:29:54+00:00\n"
 "Last-Translator: agent-test <http://www.simonlang.com/>\n"
 "Last-Translator: agent <www.simonlang.com>\n"
 "Last-Translator: bartdev2000 <benedikt.muessig@gmail.com>\n"
+"Last-Translator: Ditoran <jahnke.im>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -414,4 +415,7 @@ msgstr "% ist die Dateiendung (z.B. %s)."
 
 msgid "The ZIP creation is in progress (%s files has been added in %s zip files and the current size of the zip files is %s)."
 msgstr "Das ZIP Archiv wird erstellt... [%s Dateien in %s ZIP Archiven; Aktuelle Größe der ZIP Archive ist %s]"
+
+msgid "%s created on %s"
+msgstr "%s erstellt am %s"
 
