NEW : Take into account blogs.dir and site
git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@898045 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/backup_scheduler.pot
+++ b/lang/backup_scheduler.pot
@@ -816,3 +816,23 @@ msgstr ""
 msgid "Everything OK!"
 msgstr ""
 
+#: core.class.php:1648
+#@ backup_scheduler
+msgid "Standard"
+msgstr ""
+
+#: core.class.php:1649
+#@ backup_scheduler
+msgid "under Plugins"
+msgstr ""
+
+#: core.class.php:1650
+#@ backup_scheduler
+msgid "under Tools"
+msgstr ""
+
+#: core.class.php:1651
+#@ backup_scheduler
+msgid "under Settings"
+msgstr ""
+
