* BUG: some installation have some difficulties to identify the type of the column of the SQL table, thus now the quote are set by default one all column
git-svn-id: https://plugins.svn.wordpress.org/backup-scheduler/trunk@1078817 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 Password protected Alexander Dippold (Alexander.Dippold gmail)
 add gz compression for sql fles
+add quotes for every entries by default
